--- a/PakhanguProject/build.gradle
+++ b/PakhanguProject/build.gradle
@@ -4,11 +4,14 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenLocal()
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
-        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'com.google.gms:google-services:4.3.0'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.40'
+        
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,7 +20,9 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenLocal()
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
         
     }
 }
